--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid slider">
     <div class="row slider-text">
         <div class="col-12">
-            <button class="arrow-button">SHOP</button>
+            <button>GO TO SHOP</button>
             <h2>3 pasos al dia, 3 minutos al dia</h2>
             <h1>COSMÉTICA MASCULINA MEDITERRÁNEA</h1>
         </div>
@@ -47,14 +47,14 @@
 <!--3 images-->
 <div class="container-fluid section1">
     <div class="row">
-        <div class="col-12 col-md-4 test">
-            <button class="arrow-button">TEST DE PIEL</button>
+        <div class="col-12 col-md-4 test" routerLink="/shop">
+            <button>TEST DE PIEL</button>
         </div>
-        <div class="col-12 col-md-4 muestras">
-            <button class="arrow-button">MUESTRAS</button>
+        <div class="col-12 col-md-4 muestras" routerLink="/muestras">
+            <button>MUESTRAS</button>
         </div>
-        <div class="col-12 col-md-4 boxes">
-            <button class="arrow-button">BOXES</button>
+        <div class="col-12 col-md-4 boxes" routerLink="/shop">
+            <button>BOXES</button>
         </div>
     </div>
 </div>
@@ -64,7 +64,18 @@
     <div class="row">
         <div class="col-12 col-md-4 face1">
         </div>
-        <div class="col-12 col-md-4 text-col">
+        <div class="col-12 col-md-4 best-sellers">
+            <div class="container-fluid best-sellers-container">
+                <h2>
+                    BOX ANTIARRUGAS
+                </h2>
+                <h1 class="best">
+                    BEST SELLERS
+                </h1>
+                <h2>
+                    BOX GOOD FACE
+                </h2>
+            </div>
         </div>
         <div class="col-12 col-md-4 face2">
         </div>
@@ -75,8 +86,8 @@
 <div class="container-fluid section3">
     <div class="row">
         <div class="col">
-            <button class="arrow-button">Shop</button>
-            <h1>COSMÉTICA MASCULINA MEDITERRÁNEA</h1>
+            <button>INGREDIENTES</button>
+            <h1>BUSCAMOS LA MÁXIMA CALIDAD Y EFECTIVIDAD</h1>
         </div>
     </div>
 </div>
@@ -90,7 +101,7 @@
                 <h1><strong>Consulta gratuita con un experto de BOXSR</strong></h1>
                 <p>Te resolvemos todas tus dudas en una <strong>sesión de 10 minutos por llamada o videolalmada</strong>
                 </p>
-                <button class="arrow-button">Reservar</button>
+                <button>RESERVAR</button>
             </div>
 
         </div>
