shop y producto ok

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid slider">
     <div class="row slider-text">
         <div class="col-12">
-            <button>GO TO SHOP</button>
+            <button routerLink="/shop">GO TO SHOP</button>
             <h2>3 pasos al dia, 3 minutos al dia</h2>
             <h1>COSMÉTICA MASCULINA MEDITERRÁNEA</h1>
         </div>
@@ -19,26 +19,26 @@
 
     <div class="row steps-container">
         <div class="col-12 col-md-4 step">
-            <a routerLink="/shop">
+            <a routerLink="/contacto">
                 <p class="step-number">1</p>
                 <p>¿Eres nuevo y no sabes que tipo de piel tienes?</p>
-                <p><strong>¡Haz nuestro test!</strong></p>
+                <h3><strong>¡Consulta con nuestro especialista!</strong></h3>
             </a>
         </div>
 
         <div class="col-12 col-md-4 step">
             <a routerLink="/muestras">
                 <p class="step-number">2</p>
-                <p>¿Eres nuevo y no sabes que tipo de piel tienes?</p>
-                <p><strong>¡Haz nuestro test!</strong></p>
+                <p>¿Quieres probar las cremas antes de comprar?</p>
+                <h3><strong>¡Pide muestras gratuitas!</strong></h3>
             </a>
         </div>
 
         <div class="col-12 col-md-4 step">
             <a routerLink="/shop">
-                <p class="step-number">3</p>
-                <p>¿Eres nuevo y no sabes que tipo de piel tienes?</p>
-                <p><strong>¡Haz nuestro test!</strong></p>
+                <p class="step-number step3">3</p>
+                <p>¿Te gustan las cosas buenas que te simplifican la vida?</p>
+                <h3><strong>¡Boxr es para ti!</strong></h3>
             </a>
         </div>
     </div>
