--- a/src/app/pages/shop/shop-list/shop-list.component.html
+++ b/src/app/pages/shop/shop-list/shop-list.component.html
@@ -1,21 +1,31 @@
 <!-- slider -->
 <div class="container-fluid slider">
-    <div class="row slider-text">
+</div>
+
+<div class="container-fluid intro">
+    <div class="row intro-text">
         <div class="col-12">
-            <h1>Tenemos lo que tu piel necesita</h1>
+            <h2>TENEMOS LO QUE TU PIEL NECESITA</h2>
+        </div>
+    </div>
+
+    <div class="row intro-text">
+        <div class="col-12">
+            <h3>Si aún no sabes que tipo que tipo de producto necesitas consulta con nuestro especialista</h3>
+            <button class="añadir-carro">DESCUBRE AQUÍ COMO CUIDAR TU PIEL</button>
         </div>
     </div>
 </div>
 
 <!--filtro-->
-<div class="container-fluid">
+<!-- <div class="container-fluid">
     <div class="row">
         <div class="col-12 filtro">
 
         </div>
 
     </div>
-</div>
+</div> -->
 
 <!-- shop starts -->
 <div class="container-fluid cards-container">
