--- a/src/app/pages/shop/shop-list/shop-list.component.scss
+++ b/src/app/pages/shop/shop-list/shop-list.component.scss
@@ -1,127 +1,138 @@
 // global styles
 * {
-    font-family: averta !important;
-  }
-  
-  body {
-    overflow-x: hidden;
-  }
-  
-  .arrow-button {
-    font-weight: 700;
-    outline: none;
-    padding: 3px 40px 3px 10px;
-    background-color: white;
-  }
-  
-  a {
-    text-decoration: none;
-    color: black;
-  }
-  
-  //Slider
-  .slider {
-    margin-top: -70px;
-    height: 50vh;
-    background-image: url(../../../../assets/images/portada.png);
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    align-items: flex-end;
-  }
-  
-  .slider-text {
-    width: 100%;
-    margin: 10px;
-  
-    h1 {
-      color: #4b4a4a;
-      font-size: 30px;
-      font-weight: 700;
+  font-family: averta !important;
+}
+
+body {
+  overflow-x: hidden;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+//Slider
+.slider {
+  margin-top: -70px;
+  height: 70vh;
+  background-image: url(../../../../assets/images/slider-shop.png);
+  background-size: cover;
+  background-position: center;
+  margin-bottom: 20px;
+}
+
+.intro-text {
+  text-align: center;
+
+  button {
+    width: 30%;
+
+    &:hover {
+      background-color: #4b4a4a;
+      color: white;
+      border: none;
+      padding: 17px 0px;
+      font-size: 16px;
+      transition: 0.3s;
     }
-    h2 {
-      margin-bottom: 5px;
-      margin-top: 5px;
-      color: #4b4a4a;
-    }
-  
-    button {
-      margin-bottom: 5px;
-    }
-  }
-  
-  // cards
-  .cards-container {
-    padding: 50px 50px;
-  
-  
-    .card-container {
-      padding: 0px;
-      display: flex;
-      flex-direction: column;
-      padding: 10vh 5vw;
-  
-      .card-img {
-        height: 300px;
-        background-size: cover;
-        background-position: center;
-        margin: 0px;
-        padding: 0px;
-        border-radius: 0px !important;
-      }
-  
-      .card-text {
-        margin-left: 0px;
-        margin-top: 10px;
-        padding: 0px;
-        width: 90%;
-        margin-bottom: 20PX;
-  
-        h2 {
-          font-size: 24px;
-          font-weight: 700;
-        }
-  
-        p {
-          color:  #4b4a4a;
-        }
-      }
-    }
-  }
-  
-  .filtro {
-    background-color:  #9b9b9b;
-    height: 60px;
   }
 
-  .buttons-container {
+  h1 {
+    color: #4b4a4a;
+    font-size: 30px;
+    font-weight: 600;
+    margin-bottom: 5px;
+  }
+  h2 {
+    margin-bottom: 5px;
+    margin-top: 5px;
+    color: #4b4a4a;
+  }
+
+  button {
+    margin-bottom: 5px;
+  }
+}
+
+// cards
+.cards-container {
+  .card-container {
     display: flex;
-    padding: 0px;
+    flex-direction: column;
+    padding: 20px 50px 50px 50px;
+
+    .card-img {
+      height: 300px;
+      background-size: cover;
+      background-position: center;
+      margin: 0px;
+      padding: 0px;
+      border-radius: 0px !important;
+    }
+
+    .card-text {
+      margin-left: 0px;
+      margin-top: 10px;
+      padding: 0px;
+      width: 90%;
+      margin-bottom: 20px;
+
+      h2 {
+        font-size: 24px;
+        font-weight: 700;
+      }
+
+      p {
+        color: #4b4a4a;
+      }
+    }
+  }
+}
+
+.filtro {
+  background-color: #9b9b9b;
+  height: 60px;
+}
+
+.buttons-container {
+  display: flex;
+  padding: 0px;
 }
 
 button {
-    background-color: #4b4a4a;
-    color: white;
-    border: none;
-    padding: 16px 0px;
-    font-size: 16px;
-    width: 100%;
-  }
+  background-color: #4b4a4a;
+  color: white;
+  border: none;
+  padding: 16px 0px;
+  font-size: 16px;
+  width: 100%;
+}
 
-  .añadir-carro {
-    background-color: white;
-    color: #4b4a4a;
-    border: #4b4a4a 1px solid;
-  }
+.añadir-carro {
+  background-color: white;
+  color: #4b4a4a;
+  border: #4b4a4a 1px solid;
+}
 
-  
-  @media (max-width: 575.98px) { 
-    .cards-container {
-      padding: 0px;
-    }
-
-    .buttons-container {
-      flex-direction: column;
+@media (max-width: 575.98px) {
+  .slider {
+    margin-bottom: 10px;
+    h1 {
+      font-size: 18px;
     }
   }
-  
+  .card-container {
+    padding: 30px 20px 20px 20px !important;
+  }
+
+  .buttons-container {
+    flex-direction: column;
+  }
+
+  .intro-text {
+    button {
+      width: 80%;
+    }
+  }
+}
