--- a/src/app/pages/muestras/muestras-comprar/muestras-comprar.component.scss
+++ b/src/app/pages/muestras/muestras-comprar/muestras-comprar.component.scss
@@ -82,7 +82,7 @@ button {
   }
   .tipo{
     padding: 10px 0x;
-    background-color: gainsboro;
+    background-color:darkgrey;
     width: 45%;
     margin-left: 16px;
   }
