--- a/src/app/components/carrito/carrito-item/carrito-item.component.html
+++ b/src/app/components/carrito/carrito-item/carrito-item.component.html
@@ -1,6 +1,5 @@
 <div class="carrito-item">
-    <span>{{ carritoItem.nombre }}</span> x 
-    <span>{{ carritoItem.cantidad }}</span>: 
-    <strong>{{ carritoItem.precio * carritoItem.cantidad | currency:'EUR' }}              </strong> <div>
-   
+    <span>{{ carritoItem.nombre | titlecase}}</span> <br>x
+    <span>{{ carritoItem.cantidad }}</span> =
+    <strong class="item-precio">{{ carritoItem.precio * carritoItem.cantidad }}€</strong>
 </div>
