--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,35 +1,49 @@
 <p-sidebar [(visible)]="mostrarLogin" [(visible)]="abrirLogin" (onHide)="cerrarPanel.emit()" styleClass="p-sidebar-sm">
-  <form [formGroup]="loginForm"  class="container">
-      <div class="form-group">
-          <label for="username">Email</label>
-          <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-          <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-              <div *ngIf="f.username.errors.required">Email requerido</div>
-          </div>
-      </div>
-      <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-          <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-              <div *ngIf="f.password.errors.required">Password requerido</div>
-          </div>
-      </div>
-      <div class="form-group">
-          <button [disabled]="loading" class="btn btn-primary" (click)="onSubmit()">
-              <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-              Login
-          </button>
-      </div>
-      <div class="form-group">
-        <button mat-raised-button color="primary" (click)="registrarUsuario()">
-            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-            Registrar
-        </button>
-    </div>
-      <div class="form-group">
-        <p *ngIf="error">
-          Usuario o contraseña incorrecta
-      </p>
-      </div>
-  </form>
+    <form [formGroup]="loginForm" class="container">
+        <div class="form-group">
+            <mat-form-field class="full-width">
+
+                <mat-label for="username">Email</mat-label>
+                <input matInput type="text" formControlName="username" class="form-control"
+                    [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+                <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+                    <div *ngIf="f.username.errors.required">Email requerido</div>
+                </div>
+            </mat-form-field>
+        </div>
+        <div class="form-group">
+            <mat-form-field class="full-width">
+                <mat-label for="password">Password</mat-label>
+                <input matInput type="password" formControlName="password" class="form-control"
+                    [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                    <div *ngIf="f.password.errors.required">Password requerido</div>
+                </div>
+            </mat-form-field>
+        </div>
+        <div class="form-group">
+            <button mat-raised-button [disabled]="loading" (click)="onSubmit()">
+                <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                Login
+            </button>
+        </div>
+        <div class="form-group registro">
+            <div class="registro-boton">
+                <p>Si aún no tienes cuenta registrate para realizar tu compra</p>
+
+                <button mat-raised-button (click)="registrarUsuario()">
+                    <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
+                    Registrate aquí
+                </button>
+            </div>
+
+            <p class="promocion"><strong>¡Disfrutarás de descuentos y promociones!</strong></p>
+
+        </div>
+        <div class="form-group">
+            <p *ngIf="error">
+                Usuario o contraseña incorrecta
+            </p>
+        </div>
+    </form>
 </p-sidebar>
