--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,13 +1,47 @@
-.container{
-  padding: 1.6rem;
+* {
+  font-family: averta !important;
+  color: #4b4a4a;
 }
 
-:host{
-p-sidebar{
-  ::ng-deep {
-    .p-sidebar{
-      z-index: 9999 !important;
+mat-form-field {
+  width: 85%;
+}
+
+input {
+  &:focus {
+    outline: none !important;
+    outline: 0px !important;
+  }
+}
+.container {
+  padding: 5px;
+  margin-top: 20px;
+}
+
+:host {
+  p-sidebar {
+    ::ng-deep {
+      .p-sidebar {
+        z-index: 9999 !important;
+      }
     }
   }
+}
+
+.registro {
+  text-align: center;
+
+  .registro-boton {
+    border: #4b4a4a9f 1px solid;
+    border-radius: 10px;
+    padding: 10px;
   }
+
+  p {
+    margin-bottom: 2px;
+  }
+}
+
+.promocion {
+  margin-top: 10px;
 }
