--- a/src/app/pages/checkout/checkout-resumen-pedido/checkout-resumen-pedido.component.scss
+++ b/src/app/pages/checkout/checkout-resumen-pedido/checkout-resumen-pedido.component.scss
@@ -1,8 +1,80 @@
-.resumenPedido{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-    padding: 20px;
-    margin-right: 20px;;
+* {
+  font-family: averta !important;
+}
+
+.container {
+  padding: 5px;
+  margin-top: 30px !important;
+}
+
+:host {
+  p-sidebar {
+    ::ng-deep {
+      .p-sidebar {
+        z-index: 9999 !important;
+      }
+    }
+  }
+}
+
+ul {
+  padding-left: 0px;
+}
+
+.checkout-button {
+  background-color: white;
+  color: #4b4a4a;
+  border: #4b4a4a 2px solid !important;
+  padding: 12px 24px;
+  font-size: 16px;
+  font-weight: 600;
+  transition: 0.3s;
+  outline: none;
+
+  &:hover {
+    background-color: #4b4a4a;
+    color: white;
+    border: #4b4a4a 2px solid !important;
+  }
+}
+
+.item {
+  display: flex;
+  font-size: 18px;
+  border-top: #4b4a4a 1px solid;
+  border-left: none !important;
+  border-right: none !important;
+
+  .item-precio {
+    font-weight: 700;
+  }
+}
+
+.eliminar-button {
+  color: white;
+  background-color: #4b4a4a;
+  outline: none;
+  border: none;
+  border-radius: 50%;
+  margin-right: 0px;
+  position: absolute;
+  right: 5px;
+  top: 20px;
+  padding: 5px;
+  width: 33px;
+
+  &:hover {
+    background-color: rgb(197, 4, 4);
+  }
+}
+
+.total {
+  font-size: 30px;
+  font-weight: 700;
+  border: #4b4a4a 1px solid;
+  border-left: none !important;
+  border-right: none !important;
+  border-bottom: #4b4a4a 1px solid !important;
+  border-top: #4b4a4a 1px solid !important;
+  padding: 16px;
 }
