--- a/src/app/admin/pages/colecciones/colecciones-list/colecciones-list.component.html
+++ b/src/app/admin/pages/colecciones/colecciones-list/colecciones-list.component.html
@@ -1,78 +1,78 @@
 <div class="grid-container">
 
-    <mat-form-field>
-        <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-    </mat-form-field>
+  <mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+  </mat-form-field>
 
-    <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort>
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
 
-          <ng-container matColumnDef="imagen">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>Imagen</th>
-            <td mat-cell *matCellDef="let row"><img [src]="row.imagen_url" /> </td>
+      <ng-container matColumnDef="imagen">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Imagen</th>
+        <td mat-cell *matCellDef="let row"><img [src]="row.imagen_url" /> </td>
+      </ng-container>
+
+      <!-- ID Column -->
+      <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre de colección</th>
+        <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
+      </ng-container>
+
+      <!-- nombre Column -->
+      <ng-container matColumnDef="video">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Video url</th>
+        <td mat-cell *matCellDef="let row"> {{row.video_url}} </td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="precioRebajado">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Precio rebajado</th>
+        <td mat-cell *matCellDef="let row"> {{row.precio_rebajado}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="precioOriginal">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Precio original</th>
+        <td mat-cell *matCellDef="let row"> {{row.precio_original}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="deleted">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Activa</th>
+        <td mat-cell *matCellDef="let row">
+          <ng-container *ngIf="row.deleted === 0">
+            Si
           </ng-container>
-
-            <!-- ID Column -->
-            <ng-container matColumnDef="nombre">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre de colección</th>
-                <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
-            </ng-container>
-
-            <!-- nombre Column -->
-            <ng-container matColumnDef="video">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Video url</th>
-                <td mat-cell *matCellDef="let row"> {{row.video_url}} </td>
-            </ng-container>
-
-            <!-- Name Column -->
-            <ng-container matColumnDef="precioRebajado">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Precio rebajado</th>
-                <td mat-cell *matCellDef="let row"> {{row.precio_rebajado}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="precioOriginal">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Precio original</th>
-                <td mat-cell *matCellDef="let row"> {{row.precio_original}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="deleted">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Activa</th>
-              <td mat-cell *matCellDef="let row">
-                <ng-container *ngIf="row.deleted === 0">
-                  Si
-                </ng-container>
-                <ng-container *ngIf="row.deleted === 1">
-                  No
-                </ng-container>
-              </td>
+          <ng-container *ngIf="row.deleted === 1">
+            No
           </ng-container>
+        </td>
+      </ng-container>
 
-            <ng-container matColumnDef="actions">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-              <td mat-cell *matCellDef="let row">
-                <button (click)="modificarColeccion(row)">Modificar</button>
-                <button (click)="borrarColeccion(row)">
-                  <ng-container *ngIf="row.deleted === 0">
-                    Desactivar
-                  </ng-container>
-                  <ng-container *ngIf="row.deleted === 1">
-                    Activar
-                  </ng-container>
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-raised-button (click)="modificarColeccion(row)">Modificar</button>
+          <button mat-raised-button class="borrar" (click)="borrarColeccion(row)">
+            <ng-container *ngIf="row.deleted === 0">
+              Desactivar
+            </ng-container>
+            <ng-container *ngIf="row.deleted === 1">
+              Activar
+            </ng-container>
 
-                </button>
-              </td>
-          </ng-container>
+          </button>
+        </td>
+      </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-            <!-- Row shown when there is no matching data. -->
-            <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-            </tr>
-        </table>
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
+    </table>
 
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
-    </div>
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  </div>
 </div>
