--- a/src/app/admin/pages/home-admin/home-admin.component.html
+++ b/src/app/admin/pages/home-admin/home-admin.component.html
@@ -1,13 +1,17 @@
-<h2>TOTAL VENTAS MENSUALES</h2>
-<h1>{{ totalVentasMensuales }}</h1>
+<div class="container">
+    <h2>TOTAL VENTAS MENSUALES</h2>
+    <h1>{{ totalVentasMensuales }}</h1>
 
-<h2>TOTAL VENTAS DIARIAS</h2>
-<h1>{{ totalVentasDiarias }}</h1>
+    <h2>TOTAL VENTAS DIARIAS</h2>
+    <h1>{{ totalVentasDiarias }}</h1>
+</div>
 
-<button (click)="onMostrarCrearAdmin()">Crear administrador</button>
-<app-modificar-admin [display]="mostrarModificarAdmins" [admin]="adminModificar" (cerrarDialogo)="onOcultarModificarAdmins()" *ngIf="mostrarModificarAdmins"></app-modificar-admin>
+<button mat-raised-button (click)="onMostrarCrearAdmin()">Crear administrador</button>
+<app-modificar-admin [display]="mostrarModificarAdmins" [admin]="adminModificar"
+    (cerrarDialogo)="onOcultarModificarAdmins()" *ngIf="mostrarModificarAdmins"></app-modificar-admin>
 
-<app-crear-admin  [display]="mostrarCrearAdmin" (cerrarDialogo)="onOcultarCrearAdmin()" *ngIf="mostrarCrearAdmin"></app-crear-admin>
+<app-crear-admin [display]="mostrarCrearAdmin" (cerrarDialogo)="onOcultarCrearAdmin()" *ngIf="mostrarCrearAdmin">
+</app-crear-admin>
 <app-lista-admin (modificar)="modificarAdmin($event)" (borrar)="borrarAdmin($event)"></app-lista-admin>
 
 
