--- a/src/app/admin/pages/home-admin/lista-admin/lista-admin.component.html
+++ b/src/app/admin/pages/home-admin/lista-admin/lista-admin.component.html
@@ -1,58 +1,58 @@
 <div class="grid-container">
 
-  <mat-form-field>
-      <mat-label>Filtro</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-  </mat-form-field>
- 
-  
-  <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource" matSort>
+    <mat-form-field>
+        <mat-label>Filtro</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+    </mat-form-field>
 
-          <!-- nombre Column -->
-          <ng-container matColumnDef="nombre">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
-              <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
-          </ng-container>
 
-          <!-- Name Column -->
-          <ng-container matColumnDef="apellidos">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Apellidos</th>
-              <td mat-cell *matCellDef="let row"> {{row.apellidos}} </td>
-          </ng-container>
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" matSort>
 
-          <ng-container matColumnDef="email">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
-              <td mat-cell *matCellDef="let row"> {{row.email}} </td>
-          </ng-container>
+            <!-- nombre Column -->
+            <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
+                <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
+            </ng-container>
 
-          <ng-container matColumnDef="password">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Password</th>
-              <td mat-cell *matCellDef="let row"> {{row.password}} </td>
-          </ng-container>
+            <!-- Name Column -->
+            <ng-container matColumnDef="apellidos">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Apellidos</th>
+                <td mat-cell *matCellDef="let row"> {{row.apellidos}} </td>
+            </ng-container>
 
-          <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-            <td mat-cell *matCellDef="let row">
-              <button (click)="modificarAdmin(row)">Modificar</button>
-              <button (click)="borrarAdmin(row.usuario_id)">Borrar</button>
-            </td>
-        </ng-container>
-        <ng-container matColumnDef="deleted">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-          <td mat-cell *matCellDef="let row">
-          </td>
-      </ng-container>
+            <ng-container matColumnDef="email">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Email</th>
+                <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+            </ng-container>
 
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            <ng-container matColumnDef="password">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Password</th>
+                <td mat-cell *matCellDef="let row"> {{row.password}} </td>
+            </ng-container>
 
-          <!-- Row shown when there is no matching data. -->
-          <tr class="mat-row" *matNoDataRow>
-              <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-          </tr>
-      </table>
+            <ng-container matColumnDef="actions">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+                <td mat-cell *matCellDef="let row">
+                    <button mat-raised-button (click)="modificarAdmin(row)">Modificar</button>
+                    <button class="borrar" mat-raised-button (click)="borrarAdmin(row.usuario_id)">Borrar</button>
+                </td>
+            </ng-container>
+            <ng-container matColumnDef="deleted">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+                <td mat-cell *matCellDef="let row">
+                </td>
+            </ng-container>
 
-      <mat-paginator [pageSizeOptions]="[10, 20, 50, 100]"></mat-paginator>
-  </div>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+            </tr>
+        </table>
+
+        <mat-paginator [pageSizeOptions]="[10, 20, 50, 100]"></mat-paginator>
+    </div>
 </div>
