--- a/src/app/admin/pages/productos/productos-list/productos-list.component.html
+++ b/src/app/admin/pages/productos/productos-list/productos-list.component.html
@@ -1,82 +1,82 @@
 <div class="grid-container">
 
-    <mat-form-field>
-        <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
-    </mat-form-field>
+  <mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+  </mat-form-field>
 
-    <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort>
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
 
-            <ng-container matColumnDef="imagen">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Imagen</th>
-              <td mat-cell *matCellDef="let row"><img [src]="row.imagen_url" /> </td>
-            </ng-container>
+      <ng-container matColumnDef="imagen">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Imagen</th>
+        <td mat-cell *matCellDef="let row"><img [src]="row.imagen_url" /> </td>
+      </ng-container>
 
-            <!-- ID Column -->
-            <ng-container matColumnDef="codigo_producto">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Código de producto</th>
-                <td mat-cell *matCellDef="let row"> {{row.codigo_producto}} </td>
-            </ng-container>
+      <!-- ID Column -->
+      <ng-container matColumnDef="codigo_producto">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Código de producto</th>
+        <td mat-cell *matCellDef="let row"> {{row.codigo_producto}} </td>
+      </ng-container>
 
-            <!-- nombre Column -->
-            <ng-container matColumnDef="nombre">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
-                <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
-            </ng-container>
+      <!-- nombre Column -->
+      <ng-container matColumnDef="nombre">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</th>
+        <td mat-cell *matCellDef="let row"> {{row.nombre}} </td>
+      </ng-container>
 
-            <!-- Name Column -->
-            <ng-container matColumnDef="tipo">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo</th>
-                <td mat-cell *matCellDef="let row"> {{row.tipo_producto}} </td>
-            </ng-container>
+      <!-- Name Column -->
+      <ng-container matColumnDef="tipo">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo</th>
+        <td mat-cell *matCellDef="let row"> {{row.tipo_producto}} </td>
+      </ng-container>
 
-            <ng-container matColumnDef="peso">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Peso</th>
-                <td mat-cell *matCellDef="let row"> {{row.peso}} </td>
-            </ng-container>
+      <ng-container matColumnDef="peso">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Peso</th>
+        <td mat-cell *matCellDef="let row"> {{row.peso}} </td>
+      </ng-container>
 
-            <ng-container matColumnDef="precio">
-                <th mat-header-cell *matHeaderCellDef mat-sort-header>Precio</th>
-                <td mat-cell *matCellDef="let row"> {{row.precio}} </td>
-            </ng-container>
+      <ng-container matColumnDef="precio">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Precio</th>
+        <td mat-cell *matCellDef="let row"> {{row.precio}} </td>
+      </ng-container>
 
-            <ng-container matColumnDef="deleted">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header>Activo</th>
-              <td mat-cell *matCellDef="let row">
-                <ng-container *ngIf="row.deleted === 0">
-                  Si
-                </ng-container>
-                <ng-container *ngIf="row.deleted === 1">
-                  No
-                </ng-container>
-              </td>
+      <ng-container matColumnDef="deleted">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Activo</th>
+        <td mat-cell *matCellDef="let row">
+          <ng-container *ngIf="row.deleted === 0">
+            Si
           </ng-container>
-
-            <ng-container matColumnDef="actions">
-              <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
-              <td mat-cell *matCellDef="let row">
-                <button (click)="modificarProducto(row)">Modificar</button>
-                <button (click)="borrarProducto(row)">
-                  <ng-container *ngIf="row.deleted === 0">
-                  Desactivar
-                </ng-container>
-                <ng-container *ngIf="row.deleted === 1">
-                  Activar
-                </ng-container>
-                </button>
-              </td>
+          <ng-container *ngIf="row.deleted === 1">
+            No
           </ng-container>
+        </td>
+      </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header></th>
+        <td mat-cell *matCellDef="let row">
+          <button mat-raised-button (click)="modificarProducto(row)">Modificar</button>
+          <button mat-raised-button class="borrar" (click)="borrarProducto(row)">
+            <ng-container *ngIf="row.deleted === 0">
+              Desactivar
+            </ng-container>
+            <ng-container *ngIf="row.deleted === 1">
+              Activar
+            </ng-container>
+          </button>
+        </td>
+      </ng-container>
 
-            <!-- Row shown when there is no matching data. -->
-            <tr class="mat-row" *matNoDataRow>
-                <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
-            </tr>
-        </table>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
-    </div>
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+  </div>
 </div>
