--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -86,8 +86,7 @@
 <div class="container-fluid section3">
     <div class="row">
         <div class="col">
-            <button>INGREDIENTES</button>
-            <h1>BUSCAMOS LA MÁXIMA CALIDAD Y EFECTIVIDAD</h1>
+            <button>BUSCAMOS LOS INGREDIENTES CON LA MÁXIMA CALIDAD Y EFECTIVIDAD</button>
         </div>
     </div>
 </div>
